# cairo_analyzooor

./: Cargo.toml  README.md
cairo-crates/cairo-lang-formatter/src/: test.rs
src/: main.rs
src/analyzer/: analyzer.rs
src/cli/: args.rs  config.rs
src/format/: format.rs
src/rules/unused_argument/: unused_argument.rs
