[package]
name = "slither-sn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-felt = "0.1.3"
cairo-vm = "0.1.3"
clap = { version = "4.0", features = ["derive"] }
eyre = "0.6.8"
indicatif = "0.17.3"
log = "0.4.17"
serde = "1.0.152"
serde_json = "1.0.94"
