[package]
name = "slither-sn"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/0xEniotna/cairo_analyzooor"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cairo-vm = "0.1.3"
clap = { version = "4.0", features = ["derive"] }
execute = "0.2.11"
eyre = "0.6.8"
indicatif = "0.17.3"
log = "0.4.17"
salsa = "0.16.1"
serde = "1.0.152"
serde_json = "1.0.94"
